# HsHelloWorld

./: .gitignore  README.md  cabal.project  hie.yaml
app/cli/: cli.cabal
app/cli/src/: Main.hs
lib/hello/: hello.cabal
lib/hello/src/: Hello.hs
test/: test.cabal
test/src/: Main.hs
