cabal-version:      3.0
name:               test
version:            0.1.0.0
author:             NakagamiYuta
maintainer:         guguru0014@gmail.com
build-type:         Simple

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: GHC2021
    build-depends:
        base,
