cabal-version:      3.0
name:               hello
version:            0.1.0.0
author:             NakagamiYuta
maintainer:         guguru0014@gmail.com
build-type:         Simple

library
    ghc-options:      -Wall
    default-language: GHC2021
    hs-source-dirs:   src
    build-depends:
        base,
    exposed-modules:
        Hello,
